Switch to python:3.9 for better dlib compatibility

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.9-slim
+FROM python:3.9
 
 WORKDIR /app
 
@@ -14,15 +14,15 @@ RUN apt-get update && apt-get install -y \
     python3-dev \
     && rm -rf /var/lib/apt/lists/*
 
-# Upgrade pip and install dlib and face_recognition early
+# Upgrade pip and install dlib and face_recognition first
 RUN pip install --upgrade pip && \
     pip install dlib==19.22.1 face_recognition==1.3.0
 
-# Copy requirements and install remaining Python dependencies
+# Copy requirements and install remaining dependencies
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy the rest of the application code
+# Copy the rest of the application
 COPY . .
 
 EXPOSE 8000
