--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,30 +1,20 @@
-FROM python:3.9
+# ✅ Use prebuilt image with dlib, face_recognition, and OpenCV
+FROM ghcr.io/corywalker/python-dlib:3.9
 
+# Set working directory
 WORKDIR /app
 
-# Install system dependencies
-RUN apt-get update && apt-get install -y \
-    build-essential \
-    cmake \
-    libopenblas-dev \
-    liblapack-dev \
-    libx11-dev \
-    libgtk-3-dev \
-    libboost-python-dev \
-    python3-dev \
-    && rm -rf /var/lib/apt/lists/*
-
-# Upgrade pip and install dlib and face_recognition first
-RUN pip install --upgrade pip && \
-    pip install dlib==19.22.1 face_recognition==1.3.0
-
-# Copy requirements and install remaining dependencies
+# Copy only requirements first for caching
 COPY requirements.txt .
+
+# ✅ Install other required Python packages
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy the rest of the application
+# Copy rest of your application code
 COPY . .
 
+# Expose app port
 EXPOSE 8000
 
+# Start FastAPI server
 CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
